# flask-api-tutorial

./: .env  .flake8  Dockerfile  README.md  app.py  emails.py  items.py  pyproject.toml  requirements.txt  schemas.py  test_items.py
models/: __init__.py  item.py  store.py  tag.py  user.py
resources/: db.py  item.py  store.py  tag.py  user.py
resources/models/: __init__.py  item.py  store.py  tag.py
resources/tests/: test_items.py
scripts/: build.sh  destroy.sh  run.sh  run_tests.sh  stop.sh
tests/: test_user.py
