[tool.poetry]
name = "flask-api-tutorial"
version = "0.1.0"
description = "A tutorial that demonstrates how to use Flask and SQLAlchemy"
authors = ["Akeem King <akeemtlking@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_api_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.3"
flask-smorest = "^0.42.1"
python-dotenv = "^1.0.0"
pytest = "^7.4.2"
marshmallow = "^3.20.1"
sqlalchemy = "^2.0.22"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.5.3"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
